# game_cow

./: CMakeLists.txt  README.md  conanfile.txt  cow.cpp  cow.h  dancing_cow_tests.cpp  main.cpp  my_config.h
